# agentfluent

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml  release-please-config.json  scratch-redpath-583.md
.claude/: claude-security-guidance.md  loop.config.md  security-patterns.json  settings.json
.claude/agents/: anthropic-research.md  candidate-promoter.md  candidate-verifier.md  tester.md
.claude/hooks/: block_secret_reads.py  detect_secrets_in_output.py  guard_append_only.py
.claude/specs/: agent-sdk-session-format-findings.md  backlog-mvp.md  backlog-v0.3.md  backlog-v0.5.md  backlog-v0.6.md  backlog-v0.7.md  backlog-v0.8.md  backlog-v0.9.md  decisions.md  plan-100-mcp-assessment.md  plan-116-mcp-extraction.md  prd-advanced-tool-use-diagnostics.md  prd-agent-sdk-discovery.md  prd-context-fork-loop-detection.md  prd-continuous-eval.md  prd-date-range-filtering.md  prd-glossary.md  prd-loop-engineering.md  prd-loop-plugin.md  prd-mvp.md  prd-pricing-genai-migration.md  prd-quality-axis.md  prd-research-pipeline-phase-3.md  prd-tier3-github-enrichment.md  prd-tool-name-normalization.md  prd-v0.10.md  prd-v0.11.md  prd-v0.12.md  prd-v0.3.md  prd-v0.5.md  prd-v0.6.md  prd-v0.7.md  prd-v0.8.md  prd-v0.9.md  research-update-2026-04-15.md  v0.4-scope-review.md  value-review-437-verbosity.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  claude-review.yml  dependabot-auto-merge.yml  milestone-docs-issue.yml  pr-template-check.yml  release-please.yml  security-review.yml
docs/: AGENT_ANALYTICS_RESEARCH.md  COST_MODEL.md  EFFICIENCY_DIAGNOSTICS_RESEARCH.md  GLOSSARY.md  RAG_OVER_TOOLS_RESEARCH.md  ROADMAP.md  SECURITY.md  TOKEN_ACCOUNTING.md  codefluent_cli_review_042526.md
images/: capture-demos.sh
research/agent-sdk-probe/: FINDINGS.md  README.md  agent.py  fixture.txt  probe.py  run_matrix.py
scripts/: generate_glossary_md.py  generate_readme_screenshots.py
scripts/calibration/: README.md  build_notebook.py  quality_labels.json  threshold_validation.ipynb
src/agentfluent/: __init__.py
tests/: _builders.py  conftest.py  scratch_redpath_583.py
tests/fixtures/: parent_workload_session.jsonl  report_analyze_golden.md  session_basic.jsonl  session_block_per_line.jsonl  session_cli_entrypoint.jsonl  session_malformed.jsonl  session_skip_types.jsonl  session_streaming_dupes.jsonl  session_with_agent.jsonl  session_with_tool_calls.jsonl
tests/integration/: test_agent_extraction.py  test_analytics.py  test_analyze_session_scope.py  test_config_assessment.py  test_diagnostics.py  test_git_signals_real.py  test_real_sessions.py  test_subagent_traces.py
tests/unit/: test_agent_audit.py  test_agent_metrics.py  test_agent_models.py  test_append_only_guard.py  test_clustering.py  test_complexity.py  test_core_filtering.py  test_correlator.py  test_dedup.py  test_delegation.py  test_delegation_yaml_draft.py  test_diagnostics.py  test_diagnostics_pipeline.py  test_discovery.py  test_entrypoint_classification.py  test_extractor.py  test_genai_source.py  test_git_signals.py  test_github_cache.py  test_github_client.py  test_github_consent.py  test_github_detection.py  test_github_signals_ci_failure.py  test_github_signals_density.py  test_glossary_drift.py  test_glossary_loader.py  test_glossary_render.py  test_hook_inspector.py  test_loop_skill_drift.py  test_mcp_assessment.py  test_mcp_discovery.py  test_model_routing.py  test_model_routing_sdk_main.py  test_parent_workload_cluster.py  test_parent_workload_cost.py  test_parent_workload_extract.py  test_parser.py  test_paths.py  test_pipeline.py  (+26 more)
tools/: __init__.py
(+182 files in other folders)
