[project]
name = "agentfluent"
version = "0.1.0"
description = "Local-first agent analytics with prompt diagnostics"
readme = "README.md"
authors = [
    { name = "Fred Pearce", email = "fpearce@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "typer>=0.15",
    "rich>=14.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
]

[project.scripts]
agentfluent = "agentfluent.cli.main:app"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "ruff>=0.11",
    "mypy>=1.15",
    "types-pyyaml>=6.0",
]

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: tests that require real session data (deselect with '-m \"not integration\"')",
]

[tool.coverage.run]
source = ["agentfluent"]

[tool.coverage.report]
show_missing = true
skip_empty = true

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
