[project]
name = "agentfluent"
version = "0.3.0" # x-release-please-version
description = "Local-first agent analytics with prompt diagnostics"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Fred Pearce", email = "fpearce@gmail.com" }
]
requires-python = ">=3.12"
keywords = ["claude", "agent", "analytics", "cli", "llm", "diagnostics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "typer>=0.15",
    "rich>=14.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
clustering = ["scikit-learn>=1.4"]

[project.urls]
Homepage = "https://github.com/frederick-douglas-pearce/agentfluent"
Repository = "https://github.com/frederick-douglas-pearce/agentfluent"
Issues = "https://github.com/frederick-douglas-pearce/agentfluent/issues"
Changelog = "https://github.com/frederick-douglas-pearce/agentfluent/blob/main/CHANGELOG.md"

[project.scripts]
agentfluent = "agentfluent.cli.main:app"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "ruff>=0.11",
    "mypy>=1.15",
    "types-pyyaml>=6.0",
    "scikit-learn>=1.4",
    # Calibration notebook (scripts/calibration/threshold_validation.ipynb, #140).
    "jupyter>=1.0",
    "matplotlib>=3.8",
    "pandas>=2.0",
]

[build-system]
requires = ["hatchling>=1.27,<2"]
build-backend = "hatchling.build"

# Use `packages = [...]` (respects .gitignore). Do NOT switch to
# `force-include` -- it bypasses .gitignore and can bundle secrets
# into the wheel.
[tool.hatch.build.targets.wheel]
packages = ["src/agentfluent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: tests that require real session data (deselect with '-m \"not integration\"')",
]

[tool.coverage.run]
source = ["agentfluent"]

[tool.coverage.report]
show_missing = true
skip_empty = true

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["sklearn.*"]
ignore_missing_imports = true
